--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "DMK / Personal Homepage"
+title                    : "DMK's Personal Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "DMK"
 description              : &description "personal description"
 url                      : https://codedmk.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
