--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,25 @@ main:
   - title: "CV"
     url: /cv/
 
+#* M.S. in Jekyll, GitHub University, 2021
+#* B.S. in GitHub, GitHub University, 2018
+
+#Work experience
+#======
+#* Spring 2024: Academic Pages Collaborator
+#* Fall 2015: Research Assistant
+#* Summer 2015: Research Assistant
+  
+#Selected Awards
+#======
+#* Skill 1
+#* Skill 2
+#  * Sub-skill 2.1
+#  * Sub-skill 2.2
+#  * Sub-skill 2.3
+#* Skill 3
+
+
 #  - title: "Publications"
 #    url: /publications/
 
