--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   avatar           : "dmk.png"
   name             : "Mingkun DAI"
   pronouns         : # example: "she/her"  
-  bio              : "PolyU"
-  location         : "Hong Kong"
+  bio              : "HKPolyU"
+  location         : #"Hong Kong"
   employer         : #"Red Brick University"
   uri              : # URL
   email            : #"none@example.org" 
@@ -34,7 +34,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : #"http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0001-6670-5810"
   semantic         : # URL
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
