--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Mingkun DAI"
   pronouns         : # example: "she/her"  
   bio              : "HKPolyU"
-  location         : #"Hong Kong"
+  location         : "Hong Kong"
   employer         : #"Red Brick University"
   uri              : # URL
   email            : #"none@example.org" 
