--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Hong Kong"
   employer         : #"Red Brick University"
   uri              : # URL
-  email            : #"none@example.org" 
+  email            : "ming-kun.dai@polyu.edu.hk" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
