--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com.hk/citations?user=Bu6Z4zoAAAAJ&hl=zh-CN&oi=ao"
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0001-6670-5810"
   semantic         : # URL
