--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,12 @@
 main:
 #  - title: "Portfolio"
 #    url: /portfolio/
-        
+  - title: "Publications"
+    url: /publications/
+    
+  - title: "Awards"
+    url: /awards/
+    
   - title: "CV"
     url: /cv/
 
