--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Mingkun DAI"
 title_separator          : "-"
 name                     : &name "Mingkun DAI"
-description              : &description "personal description"
+description              : &description ""
 url                      : https://codedmk.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
