--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "dmk.png"
   name             : "Mingkun DAI"
   pronouns         : # example: "she/her"  
-  bio              : "I am a Postdoctoral Fellow @ BEEE, HKPolyU. Nice to meet you!"
+  bio              : "I am a Postdoctoral Fellow @ BEEE, RISE, HKPolyU. Nice to meet you!"
   location         : "Hong Kong"
   employer         : #"Red Brick University"
   uri              : # URL
